--- a/public/css/main.css
+++ b/public/css/main.css
@@ -247,4 +247,54 @@ div.dataTables_wrapper div.dataTables_filter input {
 #contain {
     margin-top: -35px;
 }
+
+#headerwrapper1{
+	position: relative;
+	margin: 0px;
+	padding: 0px;
+	overflow: hidden;
+	height: 210px;
+	background: url(/storage/img/8.jpg) no-repeat;
+	background-size: 100% 700px;
+	background-attachment: fixed;
+	background-position: top center;
+	cursor: pointer;
+}
+
+#logotext h1 {
+    font-size: 90px;
+    z-index: 1000;
+    padding: 70px 0;
+    margin: -30px 0 0 350px;
+    font-weight: 700;
+}
+
+#logotext h1 span{
+	color: #0fb7a4;
+}
+#logotext{
+	position: absolute;
+	width: 90%;
+	height: 180px;
+	background-repeat: no-repeat;
+	background-size: 50% 180px;
+	background-position: center;
+	top: 50%;
+	cursor: pointer;
+	margin-top: -90px;
+}
+#for-flower1{
+	position: absolute;
+	width: 25%;
+	height: 100px;
+	/* background-image: url(/storage/kedia.jpg); */
+	background-repeat: no-repeat;
+	background-size: 70% 180px;
+	background-position: center;
+	top: 500px;
+	cursor: pointer;
+	margin-left: -60px;
+}
+
+
 .panel-header{height:260px;padding-top:80px;padding-bottom:45px;background:#141e30;background:linear-gradient(90deg,#0c2646,#204065 60%,#2a5788);position:relative;overflow:hidden}.panel-header .header .title{color:#fff}.panel-header .header .category{max-width:600px;color:hsla(0,0%,100%,.5);margin:0 auto;font-size:13px}.panel-header .header .category a{color:#fff}.panel-header-sm{height:135px}.panel-header-lg{height:380px}.card{border:0;border-radius:.1875rem;display:inline-block;position:relative;width:100%;margin-bottom:20px;box-shadow:0 1px 15px 1px rgba(39,39,39,.1)}.card .card-body{padding:15px 15px 10px}
