--- a/public/css/util.css
+++ b/public/css/util.css
@@ -2346,7 +2346,7 @@
 /*[ Background ]
 -----------------------------------------------------------
 */
-.bgwhite {background-color: white;}
+.bgwhite {background-color: #f8fafc;}
 .bgblack {background-color: black;}
 
 
